Refactor the entire project to improve readability and maintainability.

--- a/tasks/devops_tools.yaml
+++ b/tasks/devops_tools.yaml
@@ -1,42 +1,51 @@
 ---
-- name: Installing Terraform 1.2.6
+- name: Installing Terraform 1.5.4
   become: true
   unarchive:
     src: '{{ terraform_src }}'
     dest: '{{ bin_path }}'
     remote_src: yes
 
-- name: Installing Vagrant 2.2.19
+- name: Installing Vagrant 2.3.7
   become: true
   unarchive:
     src: '{{ vagrant_src }}'
     dest: '{{ bin_path }}'
     remote_src: yes
 
-- name: Installing Vault 1.11.1
+- name: Installing Vault 1.14.1
   become: true
   unarchive:
     src: '{{ vault_src }}'
     dest: '{{ bin_path }}'
     remote_src: yes
 
-- name: Setting Docker and Docker Compose
+- name: Setting up Docker
   become: true
   block:
-    - name: Installing Docker Key
+    - name: Downloading Docker Key
+      get_url:
+        url: '{{ docker_key_url }}'
+        dest: '{{ docker_key_temp_dest }}'
+
+    - name: Importing GPG Key
       apt_key:
-        url: '{{ docker_key }}'
-        state: present
+        keyring: '{{ docker_key_dest }}'
+        file: '{{ docker_key_temp_dest }}'
 
     - name: Installing Docker Repo
       apt_repository:
         repo: '{{ docker_repo }}'
         state: present
-        filename: docker-ce
+        update_cache: true
+
+    - name: Updating package cache
+      apt:
+        update_cache: true
 
     - name: Installing Docker Engine Stable
       apt:
-        name: docker-ce
+        name: '{{ docker_engine }}'
         state: present
         update_cache: yes
 
@@ -45,12 +54,6 @@
         name: '{{ ansible_user_id }}'
         groups: docker
         append: yes
-
-    - name: Installing Docker Compose 2.7.0
-      get_url:
-        url: '{{ docker_compose_src }}'
-        dest: '/usr/local/bin/docker-compose'
-        mode: 755
 
 - name: Installing AWS CLI using pip3
   become: true
